--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <!--  Last Published: Tue Jan 15 2019 13:48:08 GMT+0000 (UTC)  -->
 <html data-wf-page="5c376afae77d50e1d14c36ab" data-wf-site="5c376afae77d50afa34c36a9" lang="pt-BR">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132415718-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-132415718-1');
+  </script>
   <meta charset="utf-8">
   <title>Mercado da Torre | Em breve</title>
   <meta content="Mercado da Torre | Em breve" property="og:title">
