--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Jan 15 2019 13:48:08 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jan 16 2019 21:36:09 GMT+0000 (UTC)  -->
 <html data-wf-page="5c376afae77d50e1d14c36ab" data-wf-site="5c376afae77d50afa34c36a9" lang="pt-BR">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132415718-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-132415718-1');
-  </script>
   <meta charset="utf-8">
   <title>Mercado da Torre | Em breve</title>
+  <meta content="Recife terá um novo espaço de gastronomia &amp; conveniência no bairro da Torre. Em breve na Rua José Bonifácio, 747." name="description">
   <meta content="Mercado da Torre | Em breve" property="og:title">
+  <meta content="Recife terá um novo espaço de gastronomia &amp; conveniência no bairro da Torre. Em breve na Rua José Bonifácio, 747." property="og:description">
+  <meta content="summary" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -50,22 +44,25 @@
         <div class="mercado-da-torre"><img src="images/mercadodatorre.svg" alt="" class="image-4"></div>
       </div>
     </div>
-    <div id="w-node-c9c0b5518756-d14c36ab" class="illustration-wrapper"><img src="images/ilustracao.svg" alt=""></div>
+    <div id="w-node-c9c0b5518756-d14c36ab" class="illustration-wrapper"><img src="images/ilustracao.svg" alt="" class="image-6"></div>
     <div id="w-node-0d1f8728bcf2-d14c36ab" class="tagline-wrapper">
-      <h1 class="tagline-text">Um novo<br> espaço DE<br>‍<span class="tagline-bold">Gastronomia &amp;<br>Conveniência</span></h1>
+      <h1 class="intro-text">UM NOVO ESPAÇO DE <strong>GASTRONOMIA &amp; CONVENIÊNCIA</strong></h1>
+      <a href="http://Rua José Bonifácio, 747 - Torre, Recife - PE" target="_blank" class="adress-link-block w-inline-block">
+        <div class="intro-text-link">Rua José Bonifácio, 747</div>
+      </a>
     </div>
-    <div id="w-node-f2d7474e3f87-d14c36ab" class="badge-wrapper"><img src="images/18-de-fevereiro.svg" alt="Soft Open a partir de 18 de fevereiro de 2019" class="image-3"></div>
+    <div id="w-node-f2d7474e3f87-d14c36ab" class="badge-wrapper"><img src="images/soft-open-fevereiro.svg" alt="Soft Open a partir de fevereiro de 2019" class="image-3"></div>
     <div id="w-node-ea0e5c8bbdbd-d14c36ab" class="address-holder">
-      <div class="adress-wrapper"><a href="https://goo.gl/maps/e743m2UmRQr" target="_blank" class="address-link">RUA JOSÉ BONIFÁCIO, 747</a></div>
+      <div class="adress-wrapper"></div>
     </div>
     <div id="w-node-813ca2b112bd-d14c36ab" class="social-holder">
       <div class="social-wrapper">
         <div class="social-links">
-          <a href="https://facebook.com/mercadotorre" target="_blank" class="social-link w-inline-block">
+          <a href="https://www.facebook.com/mercadodatorrepe" target="_blank" class="social-link w-inline-block">
             <div class="social-icon">
               <div class="fab"></div>
             </div>
-            <div class="social-text">@mercadotorre</div>
+            <div class="social-text">mercadodatorrepe</div>
           </a>
           <a href="https://instagram.com/mercadodatorre" target="_blank" class="social-link w-inline-block">
             <div class="social-icon">
