--- a/menu-teste.html
+++ b/menu-teste.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Feb 20 2019 15:22:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Mar 22 2019 16:03:50 GMT+0000 (UTC)  -->
 <html data-wf-page="5c5207b2bad0338748bb6b7a" data-wf-site="5c3640ebf63f0c3d01a31bef" lang="pt-BR">
 <head>
   <meta charset="utf-8">
@@ -17,7 +17,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div class="fixed-navbar">
+  <div class="fixed-navbar-desktop">
     <div class="navbar-content">
       <div class="menu-left">
         <a data-w-id="abffbc31-b20d-0235-561e-d8dfce7e60a9" style="width:9EM;height:9EM" href="#" class="nav-logo-wrapper w-inline-block">
